# clean_uk_pv

./: README.md  pyproject.toml  setup.cfg
marimo_notebooks/: ARCO_ERA5_to_parquet.py  plot_some_pv_systems_with_spatial_index.py  pyproject.toml
src/clean_uk_pv/: __init__.py  download_era5.py  geospatial.py
tests/: test_download_era5.py  test_geospatial.py
