[project]
name = "clean-uk-pv"
version = "0.1.0"
description = "Clean Open Climate Fix's uk_pv dataset."
readme = "README.md"
authors = [
    { name = "Jack Kelly", email = "jack@openclimatefix.org" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.3.5",
    "fsspec>=2025.3.2",
    "gcsfs>=2025.3.2",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "ruff>=0.11.9",
    "xarray>=2025.4.0",
    "zarr>=3.0.7",
]

[project.scripts]
download_era5 = "clean_uk_pv.download_era5:download_era5"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

