[project]
name = "marimo-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "fsspec>=2025.3.2",
    "gcsfs>=2025.3.2",
    "marimo>=0.13.7",
    "matplotlib>=3.10.3",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
    "xarray>=2025.4.0",
    "zarr>=3.0.7",
]
